--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,8 +13,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
       - name: Build
-        run: npm install && npm run build
+        run: npm run build
         shell: bash
       - name: SSH
         uses: ErenKrt/ssh-push@main
