--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: Build
-        run: npm run build
+        run: npm install && npm run build
         shell: bash
       - name: SSH
         uses: ErenKrt/ssh-push@main
