--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,17 +16,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: Build
-        run: npm install && npm run build
+        run: npm run build
         shell: bash
       - name: SSH
         uses: ErenKrt/ssh-push@main
         with:
-          HOST: ${{ secrets.HOSTINGER_HOST }}
-          PORT: ${{ secrets.HOSTINGER_PORT }} 
-          USERNAME: ${{ secrets.HOSTINGER_USERNAME }}
-          PRIVATE_KEY:  ${{ secrets.HOSTINGER_PRIVATE_KEY }}
-          SOURCE: "dist/"
-          OUTDIR: "/home/u835893703/domains/fullstackbd.com/public_html/sample"
+          host: ${{ secrets.HOSTINGER_HOST }}
+          port: ${{ secrets.HOSTINGER_PORT }}
+          username: ${{ secrets.HOSTINGER_USERNAME }}
+          private_key:  ${{ secrets.HOSTINGER_PRIVATE_KEY }}
+          source: "dist/"
+          outdir: "/home/u835893703/domains/fullstackbd.com/public_html/sample"
           #exclude: |
           #  *.exe
           #scripts: |
