--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,11 +15,22 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Build
-        run: npm install && npm run build
+      - name: Install Dependency
+        run: npm install
         shell: bash
-      - name: Set up SSH key
-        run: echo '${{secrets.HOSTINGER_PRIVATE_KEY}} > .hostinger'
-      - name: Transfer the 'dist' folder to the remote server
-        run: scp -i .hostinger -r -P ${{ secrets.HOSTINGER_PORT }} ./dist ${{ secrets.HOSTINGER_USERNAME }}@${{ secrets.HOSTINGER_HOST }}:/home/u835893703/domains/fullstackbd.com/public_html/sample
-  
+      - name: Build
+        run: npm run build
+        shell: bash
+      - name: Deploy
+        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
+        env:
+          WELCOME: "ssh scp ssh pipelines"
+          LASTSSH: "Doing something after copying"
+        with:
+          host: ${{ secrets.HOSTINGER_HOST }}
+          user: ${{ secrets.HOSTINGER_USERNAME }}
+          pass: ${{ secrets.HOSTINGER_PRIVATE_KEY }}
+          port: ${{ secrets.HOSTINGER_PORT }}
+          scp: |
+            './dist' => /home/u835893703/domains/fullstackbd.com/public_html/sample
+      
