--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,5 +32,5 @@ jobs:
           pass: ${{ secrets.HOSTINGER_PASSWORD }}
           port: ${{ secrets.HOSTINGER_PORT }}
           scp: |
-            './dist' => /home/u835893703/domains/fullstackbd.com/public_html/sample
+            './dist/**/*' => /home/u835893703/domains/fullstackbd.com/public_html/sample
       
